<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="12dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/stationCode"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:digits="1234567890"
                android:hint="@string/station_code"
                android:inputType="phone"
                android:maxLength="4"
                android:singleLine="true" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/executeButton"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/query" />
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="@color/dark_gray"
            android:contentDescription="@string/or" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/searchText"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/station_name"
                android:maxLength="255"
                android:singleLine="true" >
            </EditText>

            <Button
                android:id="@+id/searchButton"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/search" />
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="@color/dark_gray"
            android:contentDescription="@string/or" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/lineSearchText"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/line_name"
                android:maxLength="255"
                android:singleLine="true" >
            </EditText>

            <Button
                android:id="@+id/lineSearchButton"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/search" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>