<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="8dp"
    android:background="@drawable/widget_shape2"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/app_name"
        android:textColor="@android:color/darker_gray"
        android:textSize="9dp" />

    <TextView
        android:id="@+id/balance"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:ellipsize="marquee"
        android:focusable="true"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/widget_loading"
        android:textColor="@android:color/white"
        android:textSize="18dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/rsd"
        android:textColor="@android:color/darker_gray"
        android:textSize="9dp" />

</LinearLayout>