<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <com.dvuckovic.busplus.MyMapView
        android:id="@+id/mapview"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:apiKey="-----------YOUR_API_KEY_HERE-----------"
        android:clickable="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_gray"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/centerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/ic_menu_button"
                android:padding="15dp"
                android:text="@string/center_location"
                android:textAllCaps="true"
                android:textSize="12dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/nearbyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/ic_menu_button"
                android:padding="15dp"
                android:text="@string/show_nearby"
                android:textAllCaps="true"
                android:textSize="12dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/lineButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/ic_menu_button"
                android:padding="15dp"
                android:text="@string/show_line"
                android:textAllCaps="true"
                android:textSize="12dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/viewButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/ic_menu_button"
                android:padding="15dp"
                android:text="@string/show_view"
                android:textAllCaps="true"
                android:textSize="12dp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
